# bmc

./: .gitignore  .justfile  Dockerfile  bmc.env  docker-compose.yml  podman_start.sh  pyproject.toml  requirements.txt  run.sh  start.sh
app/src/: apidb.py  app.py  bmc.py  formater.py  init.py  letterwriter.py  mailer.py  member.py  mrapi.py  supporter.py  table.py  tgapi.py  user.py  utils.py
app/test/: test_bmc.py  test_mailer.py  test_member.py  test_supporter.py  test_table.py  test_telegram.py
crontab/: dockeruser
database/: bmc.db.old
src/: bmc.py  formater.py  main.py  table.py  tgapi.py
test/: test_member.py
